--- a/docs/translations/de-DE/de-DE.json
+++ b/docs/translations/de-DE/de-DE.json
@@ -276,7 +276,7 @@
   "detMenuAddField": "{} hinzufügen",
   "detMenuCopyPassword": "Passwort kopieren",
   "detMenuCopyUser": "Benutzer kopieren",
-  "detSetupOtp": "Einweg-Passwörter",
+  "detSetupOtp": "Einmal-Passwörter",
   "detClone": "Kopie erstellen",
   "detCopyEntryToClipboard": "Alle Felder kopieren",
   "detClonedName": "Kopie",
@@ -305,7 +305,7 @@
   "detOtpQrError": "QR-Code Lesefehler",
   "detOtpQrErrorBody": "Der QR-Code konnte leider nicht eingelesen werden. Bitte versuchen Sie es noch einmal oder kontaktieren Sie den Hersteller mit Einzelheiten zum aufgetretenen Fehler.",
   "detOtpQrWrong": "Fehlerhafter QR-Code",
-  "detOtpQrWrongBody": "Ihr QR-Code wurde erfolgreich eingelesen, enthält jedoch kein Einweg-Passwort.",
+  "detOtpQrWrongBody": "Ihr QR-Code wurde erfolgreich eingelesen, enthält jedoch kein Einmal-Passwort.",
   "detLockField": "Dieses Feld sperren, damit der Inhalt nicht durchsuchbar ist und angezeigt wird. Um ihn anzuzeigen, muss er angeklickt werden.",
   "detUnlockField": "Dieses Feld entsperren. Dies führt dazu, dass der Inhalt direkt angezeigt wird und durchsuchbar ist.",
   "detRevealField": "Anzeigen",
@@ -327,7 +327,7 @@
   "autoTypeSelectionHintAction": "Nur das Passwort eintippen",
   "autoTypeSelectionHintOpt": "Nur den Benutzernamen eintippen",
   "autoTypeSelectionHintShift": "Andere Felder",
-  "autoTypeSelectionOtp": "Einweg-Passwort",
+  "autoTypeSelectionOtp": "Einmal-Passwort",
   "appSecWarn": "Unsichere Verbindung!",
   "appSecWarnBody1": "Sie haben diese App über eine ungesicherte Verbindung geöffnet, Sie könnten beobachtet und Ihre Passwörter könnten gestohlen werden. Wir empfehlen Ihnen dringend, die App hier nicht weiter zu nutzen, wenn Sie nicht genau wissen, was Sie tun.",
   "appSecWarnBody2": "Ihre Datenbank ist zwar verschlüsselt, aber es kann nicht sichergestellt werden, dass die App nicht auf dem Web vom Server zu Ihrem Browser manipuliert wurde.",
@@ -513,7 +513,7 @@
   "setShGen": "Passwort generieren",
   "setShSet": "App-Einstellungen",
   "setShCopyPassGlobal": "Passwort kopieren",
-  "setShCopyOtp": "Einweg-Passwort kopieren",
+  "setShCopyOtp": "Einmal-Passwort kopieren",
   "setShAutoTypeGlobal": "Auto-Type",
   "setShCopyPassOnly": "Passwort kopieren",
   "setShRestoreApp": "{} öffnen",
