--- a/docs/translations/es-ES/es-ES.json
+++ b/docs/translations/es-ES/es-ES.json
@@ -69,7 +69,7 @@
   "settings": "Opciones",
   "plugins": "Complementos",
   "cache": "caché",
-  "file": "archivo",
+  "file": "Glosario de términos",
   "webdav": "WebDAV",
   "dropbox": "Dropbox",
   "gdrive": "Google Drive",
@@ -179,7 +179,7 @@
   "searchCase": "Coincidir mayúsculas",
   "searchRegex": "RegEx",
   "searchRank": "Auto",
-  "searchExact": "Extraer",
+  "searchExact": "Exacto",
   "openOpen": "Abrir",
   "openNew": "Nueva",
   "openNewFile": "Nuevo",
@@ -266,7 +266,7 @@
   "detDelToTrash": "¿Eliminar la entrada?",
   "detDelToTrashBody": "La entrada se moverá a la papelera.",
   "detFieldCopied": "Copiado",
-  "detFieldCopiedTime": "Copiado por {} segundos",
+  "detFieldCopiedTime": "Copiado en {} segundos",
   "detCopyHint": "Puedes copiar el valor del campo haciendo clic sobre su título",
   "detMore": "más",
   "detClickToAddField": "haz clic para añadir un nuevo campo",
@@ -346,7 +346,7 @@
   "appNotSupportedError": "Tu navegador no soporta algunas de las importantes características que utilizamos.",
   "appTabWarn": "Demasiadas pestañas",
   "appTabWarnBody": "KeeWeb no se puede utilizar en dos pestañas a la vez, por favor, cierra esta pestaña.",
-  "appRightsAlert": "Bloqueando la app KeeWeb",
+  "appRightsAlert": "Bloqueando la aplicación KeeWeb",
   "appRightsAlertBody1": "Tu aplicación de KeeWeb no está protegida todavía contra cambios no autorizados. Te estamos pidiendo permiso para hacer que la aplicación sea escribible solo para administradores.",
   "appRightsAlertBody2": "¿No quieres dar permisos? Puedes hacerlo tú mismo en Terminal",
   "setGenTitle": "Opciones generales",
@@ -369,8 +369,8 @@
   "setGenNewVer": "nueva versión {} disponible",
   "setGenDownloadingUpdate": "Descargando actualización...",
   "setGenExtractingUpdate": "Extrayendo actualización...",
-  "setGenCheckErr": "Hubo un error bajando la nueva versión",
-  "setGenNeverChecked": "No se comprueban actualizaciones",
+  "setGenCheckErr": "Hubo un error descargando la nueva versión",
+  "setGenNeverChecked": "Nunca se han comprobado actualizaciones ",
   "setGenRestartToUpdate": "Reinicia la aplicación para actualizar",
   "setGenDownloadAndRestart": "Descargar actualización y reiniciar",
   "setGenAppearance": "Apariencia",
@@ -406,7 +406,7 @@
   "setGenNoRememberKeyFiles": "No recordar",
   "setGenRememberKeyFilesData": "Guardar en el almacenamiento interno",
   "setGenRememberKeyFilesPath": "Recordar solo la ruta de archivos llave",
-  "setGenLockInactive": "Si la app está inactiva",
+  "setGenLockInactive": "Si la aplicación está inactiva",
   "setGenNoAutoLock": "No auto-bloquear",
   "setGenLockMinutes": "En {} minutos",
   "setGenLockHour": "En una hora",
@@ -418,7 +418,7 @@
   "setGenClearMinute": "En un minuto",
   "setGenMinInstead": "Minimizar la aplicación en vez de cerrarla",
   "setGenLock": "Auto bloqueo",
-  "setGenLockMinimize": "Cuando la app está minimizada",
+  "setGenLockMinimize": "Cuando la aplicación está minimizada",
   "setGenLockCopy": "Al copiar contraseña",
   "setGenLockAutoType": "En auto-completado",
   "setGenLockOrSleep": "Cuando el ordenador esté bloqueado o suspendido",
@@ -428,10 +428,10 @@
   "setGenTryBeta": "Probar versión beta hasta reiniciar",
   "setGenTryBetaWarning": "Archivos sin guardar",
   "setGenTryBetaWarningBody": "Por favor guarda todos los archivos y vuelve a hacer clic sobre este botón",
-  "setGenShowAppLogs": "Mostrar logs de aplicación",
-  "setGenReloadApp": "Recargar la app",
+  "setGenShowAppLogs": "Mostrar registros de la aplicación",
+  "setGenReloadApp": "Recargar la aplicación",
   "setFilePath": "Ruta de archivo",
-  "setFileStorage": "Este archivo se ha cargado de {}.",
+  "setFileStorage": "Este archivo se ha cargado desde {}.",
   "setFileIntl": "Este archivo está almacenado dentro de la aplicación.",
   "setFileLocalHint": "¿Quieres trabajar sin problemas con archivos locales?",
   "setFileDownloadApp": "Descarga la versión de escritorio",
@@ -517,7 +517,7 @@
   "setShAutoTypeGlobal": "auto-completado",
   "setShCopyPassOnly": "copiar contraseña",
   "setShRestoreApp": "abrir {}",
-  "setShGlobal": "Estos atajos de teclado funcionan cuando la app está en segundo plano. Puedes hacer clic en ellos para seleccionar tu propio atajo.",
+  "setShGlobal": "Estos atajos de teclado funcionan cuando la aplicación está en segundo plano. Puedes hacer clic en ellos para seleccionar tu propio atajo.",
   "setShLock": "bloquear base de datos",
   "setShEdit": "Presiona una nueva combinación de teclas para usarla como atajo de teclado",
   "setPlInstallTitle": "Instalar nuevos complementos",
@@ -558,7 +558,7 @@
   "setAboutSecond": "y licenciada bajo {}.",
   "setAboutSource": "El código fuente e incidencias están en {}.",
   "setHelpFormat": "Formato de archivo",
-  "setHelpFormatBody": "Esto es una adaptación de la app {} creada con tecnologías web. Puede leer archivos en formato KeePass (kdbx). Puedes crear esos archivos (bases de datos de contraseñas) tanto en KeePass como en esta aplicación. El formato de archivos es 100% compatible y debería ser legible para ambas aplicaciones.",
+  "setHelpFormatBody": "Esto es una adaptación de la app {} creada con tecnologías web. Puede leer archivos en formato KeePass (kdbx). Puedes crear esos archivos (bases de datos de contraseñas) tanto en KeePass como en esta aplicación. El formato de archivos es 100% compatible y debería ser legible en ambas aplicaciones.",
   "setHelpProblems": "¿Necesitas ayuda?",
   "setHelpProblems1": "Si algo va mal, por favor {}",
   "setHelpProblems2": "o {}",
@@ -588,7 +588,7 @@
   "launcherSave": "Guardar base de datos de contraseñas",
   "launcherFileFilter": "Archivos KeePass",
   "authPopupRequired": "Las ventanas emergentes están bloqueadas",
-  "authPopupRequiredBody": "Por favor, permite pop-ups en tu navegador o vuelve a intentarlo.",
+  "authPopupRequiredBody": "Por favor, permite ventanas emergentes en tu navegador o vuelve a intentarlo.",
   "exportFileInfo": "Información de archivo",
   "exportHtmlName": "Nombre",
   "exportHtmlDate": "Fecha de exportación",
