--- a/docs/translations/hu/hu.json
+++ b/docs/translations/hu/hu.json
@@ -80,7 +80,7 @@
   "menuSetGeneral": "Általános",
   "menuSetAbout": "Névjegy",
   "menuAlertNoTags": "Nincs címke",
-  "menuAlertNoTagsBody": "Új címkéket a mezők szerkesztésekor adhat hozzá a címkék részben.",
+  "menuAlertNoTagsBody": "Új címkéket a mezők szerkesztésekor adhat hozzá, a címkék részben.",
   "menuEmptyTrash": "Lomtár ürítése",
   "menuEmptyTrashAlert": "Kiüríti a lomtárat?",
   "menuEmptyTrashAlertBody": "A lomtárból törölt elemek nem visszaállíthatók",
@@ -151,7 +151,7 @@
   "keyChangeRepeatPassword": "Jelszó mégegyszer",
   "keyEnter": "Enter",
   "iconFavTitle": "Weboldal favicon-jának letöltése",
-  "iconSelCustom": "Egyéni ikon kiválasztása",
+  "iconSelCustom": "Válasszon ki egy egyéni ikont",
   "listEmptyTitle": "Üres",
   "listEmptyAdd": "hozzáadás a fenti {} gombbal",
   "listGroup": "Csoport",
@@ -223,7 +223,7 @@
   "openListErrorBody": "Hiba történt a fájl lista betöltése során",
   "openShowAllFiles": "Minden fájl megjelenítése",
   "openFileNoCacheError": "A fájl nem található meg a gyorsítótárban. Ez azért fordulhat elő, mert a böngésző gyorsítótára ki lett tisztítva. A fájl megnyitásához, távolítsa el azt a KeeWeb-ből, majd adja hozzá újra.",
-  "detAttDownload": "Shift-klikk a csatolmány gombon a letöltéshez vagy",
+  "detAttDownload": "Shift-klikk a csatolmány gombon annak letöltéséhez, vagy",
   "detAttDelToRemove": "Törlés vagy eltávolítás",
   "detAttSave": "Mentés mint...",
   "detEmpty": "A jelszavai itt fognak megjelenni",
@@ -317,7 +317,7 @@
   "autoTypeLink": "továbbiak...",
   "autoTypeError": "Automatikus gépelés hiba",
   "autoTypeErrorGeneric": "Hiba történt az automatikus gépelés során: {}",
-  "autoTypeErrorGlobal": "A rendszerszintű parancsikon használatához fókuszálja az alkalmazást oda, ahova a jelszót be kívánja gépelni",
+  "autoTypeErrorGlobal": "Egy rendszerszintű parancsikon használatához fókuszálja az alkalmazást oda, ahova a jelszót be kívánja gépelni",
   "autoTypeErrorNotInstalled": "{} nincs telepítve",
   "autoTypeHeader": "Automatikus gépelés: Kiválasztás",
   "autoTypeMsgNoWindow": "Nem tudtam beolvasni az aktív ablak címét, kezdjen el gépelni a kereséshez",
@@ -480,8 +480,8 @@
   "setFileKdfParamsPar": "Párhuzamosság",
   "setFileKeyChangeForce": "Javaslat a kulcs megváltoztatására (nap)",
   "setFileUseKeyFile": "Kulcsfájl használata",
-  "setFileUseGenKeyFile": "Generált kulcsfájl használata",
-  "setFileUseOldKeyFile": "Régi kulcsfájl használata",
+  "setFileUseGenKeyFile": "A generált kulcsfájl használata",
+  "setFileUseOldKeyFile": "A régi kulcsfájl használata",
   "setFileGenKeyFile": "Új kulcsfájl generálása",
   "setFileDontUseKeyFile": "Ne használjon kulcsfájlt",
   "setFileEmptyPass": "Üres jelszó",
@@ -512,9 +512,9 @@
   "setShSave": "minden fájl mentése",
   "setShGen": "jelszó generálás",
   "setShSet": "alkalmazás beállítások",
-  "setShCopyPassGlobal": "jelszó másolása (amikor az alkalmazás háttérben van)",
+  "setShCopyPassGlobal": "jelszó másolása",
   "setShCopyOtp": "OTP másolása",
-  "setShAutoTypeGlobal": "automatikus gépelés (amikor az alkalmazás háttérben van)",
+  "setShAutoTypeGlobal": "automatikus gépelés",
   "setShCopyPassOnly": "jelszó másolása",
   "setShRestoreApp": "{} megnyitása",
   "setShGlobal": "Ezek a rendszerszintű gyorsbillentyűk akkor működnek, ha az alkalmazás fut a háttérben. Kattints a saját gyorsbillenytűk kiválasztásához.",
