--- a/docs/translations/nl-NL/nl-NL.json
+++ b/docs/translations/nl-NL/nl-NL.json
@@ -512,9 +512,9 @@
   "setShSave": "alle bestanden opslaan",
   "setShGen": "wachtwoord genereren",
   "setShSet": "app-instellingen",
-  "setShCopyPassGlobal": "kopieer wachtwoord (met de app in de achtergrond)",
+  "setShCopyPassGlobal": "wachtwoord kopiëren",
   "setShCopyOtp": "Eenmalig wachtwoord kopiëren",
-  "setShAutoTypeGlobal": "auto-type (met de app in de achtergrond)",
+  "setShAutoTypeGlobal": "auto-type",
   "setShCopyPassOnly": "Wachtwoord kopiëren",
   "setShRestoreApp": "{} openen",
   "setShGlobal": "Globale sneltoetsen zijn actief terwijl de app in de achtergrond draait. Je kunt een sneltoets klikken om deze aan te passen.",
