--- a/docs/translations/tr/tr.json
+++ b/docs/translations/tr/tr.json
@@ -223,7 +223,7 @@
   "openListErrorBody": "Dosya listesi yüklenirken bir hata yaşandı",
   "openShowAllFiles": "Tüm dosyaları göster",
   "openFileNoCacheError": "Önbellek deposunda dosya bulunamadı. Bu olabilir, çünkü tarayıcı depolama alanı temizlendi. Dosyayı açmak için, KeeWeb'den kaldırın ve tekrar ekleyin.",
-  "detAttDownload": "İndirmek için ek dosya butonuna Shift tuşuna basarak tıklayın ya da",
+  "detAttDownload": "Eki indirmek için Shift tuşuna basarak tıklayın veya",
   "detAttDelToRemove": "Kaldırmak için sil",
   "detAttSave": "Farklı kaydet",
   "detEmpty": "Parolalarınız burada gösterilecek",
@@ -245,8 +245,8 @@
   "detHistoryRevertAlertBody": "Mevcut durumunuz tarihe kaydedilecektir.",
   "detHistoryDeleteAlert": "Bu geçmiş durumu silinsin mi?",
   "detHistoryDeleteAlertBody": "Bunu geri yüklemek mümkün olmayacaktır.",
-  "detHistoryDiscardChangesAlert": "Girişte yapılan değişiklikler iptal edilsin mi?",
-  "detHistoryDiscardChangesAlertBody": "Kaydedilmemiş değişiklikler kaybedilecek, geri dönüş olmayacak.",
+  "detHistoryDiscardChangesAlert": "Girdide yapılan değişiklikler iptal edilsin mi?",
+  "detHistoryDiscardChangesAlertBody": "Kaydedilmemiş değişiklikler kaybedilecek, geri dönüşü olmayacak.",
   "detBackToList": "listeye geri dön",
   "detSetIconColor": "Rengi değiştir",
   "detSetIcon": "Simgeyi değiştir",
@@ -317,7 +317,7 @@
   "autoTypeLink": "daha fazla...",
   "autoTypeError": "Otomatik yazım hatası",
   "autoTypeErrorGeneric": "Otomatik yazım uygulanırken bir hata var: {}",
-  "autoTypeErrorGlobal": "Sistem genelinde kısayol kullanmak için lütfen uygulamada parolanızı yazmak istediğiniz yere odaklanın",
+  "autoTypeErrorGlobal": "Sistem genelinde bir kısayol kullanmak için, lütfen parolanızı yazmak istediğiniz uygulamaya odaklanın",
   "autoTypeErrorNotInstalled": "{} yüklü değil",
   "autoTypeHeader": "Otomatik Yazım: Seç",
   "autoTypeMsgNoWindow": "Etkin pencere başlığını alamadık, arama yapmak için yazmaya başla",
@@ -395,7 +395,7 @@
   "setGenTitlebarStyleHiddenInset": "Özel başlık, sürüklenebilir pencere",
   "setGenShowSubgroups": "Tüm alt kümelerden girdileri göster",
   "setGenTableView": "Girdileri tablo görünümünde listele",
-  "setGenColorfulIcons": "Listedeki renkli özel simgeler",
+  "setGenColorfulIcons": "Listedeki özel renkli simgeler",
   "setGenDirectAutotype": "Yalnızca bir eşleşen giriş bulunursa otomatik yazım için bunu seç",
   "setGenFunction": "İşlev",
   "setGenAutoSyncOnClose": "Otomatik kaydetmeyi ve eşitlemeyi kapat",
@@ -416,7 +416,7 @@
   "setGenNoClear": "Temizleme",
   "setGenClearSeconds": "{} saniye içinde",
   "setGenClearMinute": "Bir dakika içinde",
-  "setGenMinInstead": "Kapatmak yerine uygulamayı simge durumuna küçült",
+  "setGenMinInstead": "Kapatmak yerine simge durumuna küçült",
   "setGenLock": "Otomatik kilit",
   "setGenLockMinimize": "Uygulama küçültüldüğünde",
   "setGenLockCopy": "Parola kopyalandıktan sonra",
@@ -436,7 +436,7 @@
   "setFileLocalHint": "Yerel dosyalar ile sorunsuz çalışmak ister misiniz?",
   "setFileDownloadApp": "Bir masaüstü uygulaması indir",
   "setFileSave": "Kaydet",
-  "setFileSaveTo": "Farklı kaydet...",
+  "setFileSaveTo": "Farklı kaydet ...",
   "setFileClose": "Kapat",
   "setFileSync": "Eşitle",
   "setFileSyncVerb": "Eşitle",
@@ -482,7 +482,7 @@
   "setFileUseKeyFile": "Anahtar dosyası kullan",
   "setFileUseGenKeyFile": "Oluşturulan anahtar dosyasını kullan",
   "setFileUseOldKeyFile": "Eski anahtar dosyasını kullan",
-  "setFileGenKeyFile": "Yeni anahtar dosyası oluştur",
+  "setFileGenKeyFile": "Yeni bir anahtar dosyası oluştur",
   "setFileDontUseKeyFile": "Anahtar dosyası kullanma",
   "setFileEmptyPass": "Boş parola",
   "setFileEmptyPassBody": "Veritabanını boş bir parolayla kaydetmek veritabanını tamamen korumasız bırakır. Gerçekten bunu yapmak istiyor musunuz?",
