--- a/docs/translations/pt-BR/pt-BR.json
+++ b/docs/translations/pt-BR/pt-BR.json
@@ -52,7 +52,7 @@
   "password": "senha",
   "user": "usuário",
   "website": "site",
-  "tags": "etiquetas",
+  "tags": "marcadores",
   "notes": "notas",
   "entry": "entrada",
   "group": "grupo",
@@ -85,6 +85,8 @@
   "menuEmptyTrashAlert": "Esvaziar o Lixo?",
   "menuEmptyTrashAlertBody": "Você não será capaz de recuperar os itens",
   "menuItemCollapsed": "Clique duas vezes para expandir",
+  "menuRestoreApp": "Abrir {}",
+  "menuQuitApp": "Fechar {}",
   "alertYes": "Sim",
   "alertNo": "Não",
   "alertOk": "OK",
@@ -109,6 +111,8 @@
   "genPresetMac": "Endereço MAC",
   "genPresetHash128": "hash de 128-bit",
   "genPresetHash256": "hash de 256 bits",
+  "genHidePass": "Esconder senha",
+  "genShowPass": "Mostrar senha",
   "grpTitle": "Grupo",
   "grpSearch": "Ativar entradas de pesquisa neste grupo",
   "grpAutoType": "Ativar auto-teclar",
@@ -174,8 +178,10 @@
   "searchOptions": "Opções",
   "searchCase": "Compatibilizar maiúsculas/minúsculas",
   "searchRegex": "RegEx",
+  "searchExact": "Exata",
   "openOpen": "Abrir",
   "openNew": "Novo",
+  "openNewFile": "Novo",
   "openMore": "Mais",
   "openDemo": "Demonstração",
   "openXml": "Importar XML",
@@ -215,8 +221,10 @@
   "openErrorFileNotFound": "Arquivo",
   "openListErrorBody": "Ocorreu um erro ao carregar a lista de arquivos",
   "openShowAllFiles": "Mostrar todos",
+  "openFileNoCacheError": "Arquivo não encontrado no armazenamento em cache. Isto pode acontecer porque o armazenamento do navegador foi limpo. Para abrir o arquivo, remova-o de KeeWeb e adicione-o novamente.",
   "detAttDownload": "Shift-clique no botão anexo para baixar ou",
   "detAttDelToRemove": "Excluir para remover",
+  "detAttSave": "Salvar como ...",
   "detEmpty": "Suas senhas serão exibidas aqui",
   "detGroupRestore": "Para restaurar este grupo, arraste-o para qualquer grupo fora do lixo",
   "detHistoryClickPoint": "Clique na linha de tempo do histórico de entrada para ver o estado",
@@ -232,6 +240,12 @@
   "detHistoryNoTitle": "sem título",
   "detHistoryCurState": "estado atual",
   "detHistoryCurUnsavedState": "Estado atual não salvo",
+  "detHistoryRevertAlert": "Reverter para o estado do histórico?",
+  "detHistoryRevertAlertBody": "Seu estado atual será salvo no histórico.",
+  "detHistoryDeleteAlert": "Deletar este estado do histórico?",
+  "detHistoryDeleteAlertBody": "Você não poderá restaurar isto.",
+  "detHistoryDiscardChangesAlert": "Descartar mudanças feitas nesta entrada?",
+  "detHistoryDiscardChangesAlertBody": "Alterações não salvas serão perdidas, não haverá como voltar atrás.",
   "detBackToList": "voltar à lista",
   "detSetIconColor": "Alterar cor",
   "detSetIcon": "Alterar ícone",
@@ -248,6 +262,8 @@
   "detDelFromTrash": "Excluir do lixo?",
   "detDelFromTrashBody": "Você não pode recupera-lo.",
   "detDelFromTrashBodyHint": "Para remover rapidamente todos os itens do lixo, clique no ícone esvaziar no menu do Lixo.",
+  "detDelToTrash": "Apagar a entrada?",
+  "detDelToTrashBody": "A entrada será movida para a lixeira.",
   "detFieldCopied": "Copiado",
   "detFieldCopiedTime": "Copiado em {} segundos",
   "detCopyHint": "Você pode copiar o valor do campo clicando no título",
@@ -261,6 +277,7 @@
   "detMenuCopyUser": "Copiar usuário",
   "detSetupOtp": "Senhas únicas",
   "detClone": "Faça uma cópia",
+  "detCopyEntryToClipboard": "Copiar todos os campos",
   "detClonedName": "Copiar ",
   "detAutoType": "Auto-tipo",
   "detAutoTypeSettings": "Config. de auto-digitação",
@@ -289,6 +306,10 @@
   "detOtpQrWrong": "Código QR errado",
   "detOtpQrWrongBody": "Seu código QR foi digitalizado com êxito, mas não contém dados de senha únicos.",
   "detLockField": "Bloquear esse arquivo, assim o conteúdo não poderá ser procurado ou estará visível. Para mostrar o conteúdo será necessário obrigatoriamente clicar.",
+  "detUnlockField": "Desbloquear este campo, fazendo seu conteúdo pesquisável e visível imediatamente",
+  "detRevealField": "Mostrar",
+  "detHideField": "Esconder",
+  "detAutoTypeField": "Autocompletar",
   "autoTypeEntryFields": "Campos de entrada",
   "autoTypeModifiers": "Modificar teclas",
   "autoTypeKeys": "Chaves",
@@ -301,6 +322,10 @@
   "autoTypeMsgNoWindow": "Não foi possível obter o título da janela ativa, comece a digitar para pesquisar",
   "autoTypeMsgMatchedByWindow": "Selecione uma senha para {}",
   "autoTypeNoMatches": "sem combinações",
+  "autoTypeSelectionHintAction": "Escreva apenas a senha",
+  "autoTypeSelectionHintOpt": "Escreva apenas o nome de usuário",
+  "autoTypeSelectionHintShift": "Outros campos",
+  "autoTypeSelectionOtp": "Senha única",
   "appSecWarn": "Não seguro!",
   "appSecWarnBody1": "Você carregou este aplicativo com conexão insegura. Alguém pode estar observando você e roubando suas senhas. Recomendamos que você pare, a menos que você entenda claramente o que está fazendo.",
   "appSecWarnBody2": "Sim, seu banco de dados é criptografado, mas ninguém pode garantir que o aplicativo não foi modificado no caminho para você.",
@@ -355,6 +380,7 @@
   "setGenThemeHc": "Alto contraste",
   "setGenThemeSd": "Solarized dark",
   "setGenThemeSl": "Solarized light",
+  "setGenThemeMacDark": "macOS Dark",
   "setGenLocale": "Língua",
   "setGenLocOther": "Outros idiomas estão disponíveis como plugins",
   "setGenFontSize": "Tamanho da fonte",
@@ -369,8 +395,10 @@
   "setGenTableView": "Exibir a lista de inscrições",
   "setGenColorfulIcons": "Icones personalizados usam cor na lista",
   "setGenFunction": "Função",
+  "setGenAutoSyncOnClose": "Salvar e sincronizar automaticamente ao fechar",
   "setGenAutoSyncTimer": "Salvar automaticamente e sincronizar periodicamente",
   "setGenAutoSyncTimerOff": "Desabilitado",
+  "setGenAutoSyncTimerInterval": "A cada {} minuto(s)",
   "setGenRememberKeyFiles": "Lembrar dos arquivos de chaves",
   "setGenNoRememberKeyFiles": "Não lembrar",
   "setGenRememberKeyFilesData": "Utilizar armazenamento interno",
@@ -398,6 +426,7 @@
   "setGenTryBetaWarning": "Arquivos não salvos",
   "setGenTryBetaWarningBody": "Por favor salve todos os arquivos e clique aqui novamente",
   "setGenShowAppLogs": "Mostrar logs",
+  "setGenReloadApp": "Recarregar o aplicativo",
   "setFilePath": "Caminho do arquivo",
   "setFileStorage": "Este arquivo é carregado de {}.",
   "setFileIntl": "Esse arquivos está salvo no armazenamento interno",
@@ -409,6 +438,7 @@
   "setFileSync": "Sincronizar",
   "setFileSyncVerb": "Sinc",
   "setFileSaveToXml": "XML",
+  "setFileSaveToHtml": "HTML",
   "setFileLastSync": "Última sincronização",
   "setFileLastSyncUnknown": "desconhecido",
   "setFileSyncInProgress": "sincronização em progresso",
@@ -460,6 +490,7 @@
   "setFileUnsavedBody": "Existem mudanças não salvas para este arquivo",
   "setFileCloseNoSave": "Fechar e perder mudanças",
   "setFileDontClose": "Não fechar",
+  "setFileFormatVersion": "Formato de arquivo",
   "setShTitle": "Atalhos",
   "setShShowAll": "Mostra todos os itens",
   "setShColors": "Mostra itens com cores",
@@ -479,7 +510,10 @@
   "setShSet": "config. do aplicativo",
   "setShCopyPassGlobal": "copia a senha (com o aplicativo em segundo plano)",
   "setShAutoTypeGlobal": "auto-teclar (com o aplicativo em segundo plano)",
+  "setShCopyPassOnly": "Copiar senha",
+  "setShRestoreApp": "abrir {}",
   "setShLock": "trava a base de dados",
+  "setShEdit": "Pressione uma nova combinação chave e defina como um atalho",
   "setPlInstallTitle": "Instalar novos plugins",
   "setPlInstallDesc": "Os plugins adicionam funcionalidades, temas e linguagens ao KeeWeb. Eles rodam com os mesmos privilégios do KeeWeb, podem acessar e gerenciar todas suas senhas. Nunca instale plugins que você não confie.",
   "setPlInstallLabel": "URL do plugin",
@@ -548,5 +582,15 @@
   "launcherSave": "Salvar banco de dados de senhas",
   "launcherFileFilter": "Arquivos KeePass",
   "authPopupRequired": "Pop-ups estão bloqueadas",
-  "authPopupRequiredBody": "Permita as janelas pop-up para este aplicativo em seu navegador."
+  "authPopupRequiredBody": "Permita as janelas pop-up para este aplicativo em seu navegador.",
+  "exportFileInfo": "Informação do arquivo",
+  "exportHtmlName": "Nome",
+  "exportHtmlDate": "Data de exportação",
+  "exportGenerator": "Software",
+  "exportDescription": "Este arquivo é gerado com {}.",
+  "importCsvTitle": "Importar do CSV",
+  "importCsvRun": "Importar",
+  "importIgnoreField": "Ignorar",
+  "importTo": "Entradas serão importadas para",
+  "importNewFile": "Novo arquivo"
 }
