--- a/docs/translations/nl-NL/nl-NL.json
+++ b/docs/translations/nl-NL/nl-NL.json
@@ -185,6 +185,7 @@
   "openNewFile": "Nieuw",
   "openMore": "Meer",
   "openDemo": "Demo",
+  "openGenerate": "Genereren",
   "openXml": "XML importeren",
   "openCaps": "Caps Lock staat aan",
   "openClickToOpen": "Klik om een bestand te openen",
@@ -396,6 +397,7 @@
   "setGenShowSubgroups": "Items van alle subgroepen weergeven",
   "setGenTableView": "Itemlijst tabelweergave",
   "setGenColorfulIcons": "Kleurrijke eigen iconen in de lijst",
+  "setGenUseMarkdown": "Markdown in notities",
   "setGenDirectAutotype": "Als er slechts één overeenkomstig item wordt gevonden, gebruik dat dan om automatisch in te vullen",
   "setGenFunction": "Functie",
   "setGenAutoSyncOnClose": "Bij afsluiten automatisch opslaan en synchroniseren",
