--- a/docs/translations/pl/pl.json
+++ b/docs/translations/pl/pl.json
@@ -185,6 +185,7 @@
   "openNewFile": "Nowy",
   "openMore": "Więcej",
   "openDemo": "Demo",
+  "openGenerate": "Wygeneruj",
   "openXml": "Importuj XML",
   "openCaps": "Caps Lock jest włączony",
   "openClickToOpen": "Kliknij, aby otworzyć plik",
@@ -396,6 +397,7 @@
   "setGenShowSubgroups": "Pokaż wpisy ze wszystkich podgrup",
   "setGenTableView": "Widok tabeli listy wpisów",
   "setGenColorfulIcons": "Kolorowe niestandardowe ikony na liście",
+  "setGenUseMarkdown": "Markdown w notatkach",
   "setGenDirectAutotype": "Jeśli znaleziono tylko jeden pasujący wpis, wybierz go automatycznie dla auto-type",
   "setGenFunction": "Działanie",
   "setGenAutoSyncOnClose": "Automatycznie zapisuj i synchronizuj przy zamknięciu",
