--- a/docs/translations/tr/tr.json
+++ b/docs/translations/tr/tr.json
@@ -185,6 +185,7 @@
   "openNewFile": "Yeni",
   "openMore": "Dahası",
   "openDemo": "Tanıtım",
+  "openGenerate": "Oluştur",
   "openXml": "XML'den Aktar",
   "openCaps": "Caps Lock açık",
   "openClickToOpen": "Bir dosya açmak için tıklayın",
@@ -396,6 +397,7 @@
   "setGenShowSubgroups": "Tüm alt kümelerden girdileri göster",
   "setGenTableView": "Girdileri tablo görünümünde listele",
   "setGenColorfulIcons": "Listedeki özel renkli simgeler",
+  "setGenUseMarkdown": "Notları işaretle",
   "setGenDirectAutotype": "Yalnızca bir eşleşen giriş bulunursa otomatik yazım için bunu seç",
   "setGenFunction": "İşlev",
   "setGenAutoSyncOnClose": "Otomatik kaydetmeyi ve eşitlemeyi kapat",
