--- a/docs/translations/nl-NL/nl-NL.json
+++ b/docs/translations/nl-NL/nl-NL.json
@@ -317,10 +317,10 @@
   "autoTypeKeys": "Toetsen",
   "autoTypeLink": "meer...",
   "autoTypeError": "Auto-typefout",
-  "autoTypeErrorGeneric": "Er is een fout opgetreden tijdens het uitvoeren van auto-type: {}",
+  "autoTypeErrorGeneric": "Er is een fout opgetreden tijdens de uitvoering van Auto-type: {}",
   "autoTypeErrorGlobal": "Om de globale sneltoets te gebruiken, selecteer de app waar je je wachtwoord wilt typen",
   "autoTypeErrorNotInstalled": "{} is niet geïnstalleerd",
-  "autoTypeHeader": "Auto-Type: Selecteer",
+  "autoTypeHeader": "Auto-Type: Selectie",
   "autoTypeMsgNoWindow": "We konden de titel van het actieve venster niet vinden, begin met typen om te zoeken",
   "autoTypeMsgMatchedByWindow": "Selecteer een wachtwoord voor {}",
   "autoTypeNoMatches": "niks gevonden",
@@ -389,15 +389,15 @@
   "setGenFontSize": "Lettergrootte",
   "setGenFontSizeNormal": "Normaal",
   "setGenFontSizeLarge": "Groot",
-  "setGenFontSizeLargest": "Grootst",
+  "setGenFontSizeLargest": "Extra groot",
   "setGenTitlebarStyle": "Vensterstijl (vereist herstart)",
   "setGenTitlebarStyleDefault": "Standaard",
   "setGenTitlebarStyleHidden": "Aangepaste titel",
   "setGenTitlebarStyleHiddenInset": "Aangepaste titel, verplaatsbaar venster",
   "setGenShowSubgroups": "Items van alle subgroepen weergeven",
-  "setGenTableView": "Itemlijst tabelweergave",
+  "setGenTableView": "Items in tabelweergave",
   "setGenColorfulIcons": "Kleurrijke eigen iconen in de lijst",
-  "setGenUseMarkdown": "Markdown in notities",
+  "setGenUseMarkdown": "Markdown-opmaak in notities",
   "setGenDirectAutotype": "Als er slechts één overeenkomstig item wordt gevonden, gebruik dat dan om automatisch in te vullen",
   "setGenFunction": "Functie",
   "setGenAutoSyncOnClose": "Bij afsluiten automatisch opslaan en synchroniseren",
@@ -408,21 +408,21 @@
   "setGenNoRememberKeyFiles": "Niet onthouden",
   "setGenRememberKeyFilesData": "Bewaar in de interne app-opslag",
   "setGenRememberKeyFilesPath": "Onthoud alleen pad naar sleutelbestanden",
-  "setGenLockInactive": "als de app inactief is",
+  "setGenLockInactive": "Automatisch vergrendelen na inactiviteit:",
   "setGenNoAutoLock": "Niet automatisch vergrendelen",
   "setGenLockMinutes": "{} minuten",
-  "setGenLockHour": "een uur",
+  "setGenLockHour": "1 uur",
   "setGenLockHours": "{} uur",
-  "setGenLockDay": "een dag",
+  "setGenLockDay": "24 uur",
   "setGenClearClip": "Klembord wissen na kopiëren",
   "setGenNoClear": "Niet wissen",
   "setGenClearSeconds": "{} seconden",
-  "setGenClearMinute": "een minuut",
+  "setGenClearMinute": "1 minuut",
   "setGenMinInstead": "De app niet sluiten maar minimaliseren",
-  "setGenLock": "Auto-lock",
+  "setGenLock": "Automatisch vergrendelen",
   "setGenLockMinimize": "Als de app wordt geminimaliseerd",
   "setGenLockCopy": "Bij kopiëren van wachtwoord",
-  "setGenLockAutoType": "Bij auto-type",
+  "setGenLockAutoType": "Bij Auto-type",
   "setGenLockOrSleep": "Als de computer wordt vergrendeld of in slaapstand gaat",
   "setGenStorage": "Opslag",
   "setGenShowAdvanced": "Geavanceerde instellingen weergeven",
@@ -506,7 +506,7 @@
   "setShCopyPass": "kopieer wachtwoord of geselecteerd veld",
   "setShCopyUser": "gebruiker kopiëren",
   "setShCopyUrl": "website kopiëren",
-  "setShAutoType": "auto-type gekozen item",
+  "setShAutoType": "Auto-type gekozen item",
   "setShPrev": "vorig item",
   "setShNext": "volgend item",
   "setShCreateEntry": "nieuw item aanmaken",
@@ -516,7 +516,7 @@
   "setShSet": "app-instellingen",
   "setShCopyPassGlobal": "wachtwoord kopiëren",
   "setShCopyOtp": "Eenmalig wachtwoord kopiëren",
-  "setShAutoTypeGlobal": "auto-type",
+  "setShAutoTypeGlobal": "Auto-type",
   "setShCopyPassOnly": "Wachtwoord kopiëren",
   "setShRestoreApp": "{} openen",
   "setShGlobal": "Globale sneltoetsen zijn actief terwijl de app in de achtergrond draait. Je kunt een sneltoets klikken om deze aan te passen.",
