--- a/docs/translations/zh-TW/zh-TW.json
+++ b/docs/translations/zh-TW/zh-TW.json
@@ -54,7 +54,7 @@
   "website": "網站",
   "tags": "標籤",
   "notes": "備註",
-  "entry": "條目",
+  "entry": "紀錄",
   "group": "分組",
   "noTitle": "無標題",
   "or": "或",
@@ -85,6 +85,8 @@
   "menuEmptyTrashAlert": "確認清空回收站?",
   "menuEmptyTrashAlertBody": "您將無法恢復這些項目",
   "menuItemCollapsed": "雙擊以展開",
+  "menuRestoreApp": "開啟 {}",
+  "menuQuitApp": "離開 {}",
   "alertYes": "確定",
   "alertNo": "取消",
   "alertOk": "確定",
@@ -109,6 +111,8 @@
   "genPresetMac": "MAC 地址",
   "genPresetHash128": "128位散列",
   "genPresetHash256": "256位散列",
+  "genHidePass": "隱藏密碼",
+  "genShowPass": "顯示密碼",
   "grpTitle": "分組",
   "grpSearch": "允許搜索當前分組下的記錄",
   "grpAutoType": "啟用自動鍵入",
@@ -175,8 +179,10 @@
   "searchRegex": "正規表達式",
   "openOpen": "打開",
   "openNew": "新建",
+  "openNewFile": "新項目",
   "openMore": "更多",
   "openDemo": "展示",
+  "openGenerate": "生成",
   "openXml": "導入 XML",
   "openCaps": "大寫鎖定 開",
   "openClickToOpen": "點擊打開文件",
@@ -216,6 +222,7 @@
   "openShowAllFiles": "顯示所有檔案",
   "detAttDownload": "按住Shift+點擊附件按鈕下載 或",
   "detAttDelToRemove": "刪除並移除",
+  "detAttSave": "另存為...",
   "detEmpty": "您的密碼會顯示在這裡",
   "detGroupRestore": "要恢復分組,請將其從回收站中拖放到任意其它分組",
   "detHistoryClickPoint": "點擊記錄歷史時間軸上的點來查看狀態",
@@ -231,6 +238,7 @@
   "detHistoryNoTitle": "無標題",
   "detHistoryCurState": "當前狀態",
   "detHistoryCurUnsavedState": "當前未保存狀態",
+  "detHistoryRevertAlert": "還原到這個狀態?",
   "detBackToList": "返回列表",
   "detSetIconColor": "更改顏色",
   "detSetIcon": "更改圖標",
