--- a/docs/translations/fi/fi.json
+++ b/docs/translations/fi/fi.json
@@ -171,6 +171,7 @@
   "openNewFile": "Uusi",
   "openMore": "Lisää",
   "openDemo": "Demo",
+  "openGenerate": "Luo",
   "openXml": "Tuo XML-tiedosto",
   "openCaps": "Caps Lock on päällä",
   "openClickToOpen": "Avaa tiedosto napsauttamalla",
