--- a/docs/translations/ja/ja.json
+++ b/docs/translations/ja/ja.json
@@ -80,7 +80,7 @@
   "menuSetGeneral": "一般",
   "menuSetAbout": "概要",
   "menuAlertNoTags": "タグ無し",
-  "menuAlertNoTagsBody": "編集中のフィールドに新しいタグをタグ項目で追加できます。",
+  "menuAlertNoTagsBody": "編集中のフィールドに新しいタグをタグ項目で追加できます",
   "menuEmptyTrash": "ゴミ箱を空にする",
   "menuEmptyTrashAlert": "ゴミ箱を空にしますか?",
   "menuEmptyTrashAlertBody": "項目を元に戻すことはできません",
@@ -185,6 +185,7 @@
   "openNewFile": "新規",
   "openMore": "更に表示",
   "openDemo": "デモ",
+  "openGenerate": "パスワード生成",
   "openXml": "XMLをインポート",
   "openCaps": "Caps Lock オン",
   "openClickToOpen": "ファイルを開く",
@@ -222,10 +223,10 @@
   "openErrorFileNotFound": "ファイルが見つかりません",
   "openListErrorBody": "ファイルを開くときにエラーが発生しました",
   "openShowAllFiles": "全ファイルを表示",
-  "openFileNoCacheError": "キャッシュストレージにファイルが見つかりません。 これは、ブラウザのストレージがクリーンアップされたために発生する可能性があります。 ファイルを開くには、KeeWebから削除して再度追加します。",
+  "openFileNoCacheError": "キャッシュストレージにファイルが見つかりません。 これは、ブラウザのストレージがクリーンアップされたために発生する可能性があります。 ファイルを開くには、KeeWebから削除して再度追加してください。",
   "detAttDownload": "Shift+添付ファイルボタンでダウンロード、または",
   "detAttDelToRemove": "Deleteで削除",
-  "detAttSave": "…を保存",
+  "detAttSave": "保存",
   "detEmpty": "あなたのパスワードがここに表示されます",
   "detGroupRestore": "このグループを復元するには、ごみ箱の外のグループにドラッグしてください",
   "detHistoryClickPoint": "エントリ履歴をクリックするとタイムラインの状態を表示します",
@@ -517,7 +518,7 @@
   "setShAutoTypeGlobal": "自動入力を実行する",
   "setShCopyPassOnly": "パスワードをコピーする",
   "setShRestoreApp": "開く{}",
-  "setShGlobal": "これらのシステム全体のショートカットは、アプリがバックグラウンドで実行されているときに機能します。 それらをクリックして、独自のショートカットを選択できます。",
+  "setShGlobal": "これらのシステム全体のショートカットは、アプリがバックグラウンドで実行されているときに機能します。 それらをクリックして、独自のショートカットを選択できます",
   "setShLock": "データベースをロックする",
   "setShEdit": "新しいキーの組み合わせを押して、ショートカットとして設定します",
   "setPlInstallTitle": "新しいプラグインのインストール",
