--- a/docs/translations/nl-NL/nl-NL.json
+++ b/docs/translations/nl-NL/nl-NL.json
@@ -440,7 +440,7 @@
   "setFileSave": "Opslaan",
   "setFileSaveTo": "Opslaan als...",
   "setFileClose": "Sluiten",
-  "setFileSync": "Synchronisatie",
+  "setFileSync": "Synchroniseren",
   "setFileSyncVerb": "Synchronisatie",
   "setFileSaveToXml": "XML",
   "setFileSaveToHtml": "HTML",
