--- a/docs/translations/ru-RU/ru-RU.json
+++ b/docs/translations/ru-RU/ru-RU.json
@@ -185,6 +185,7 @@
   "openNewFile": "Новый",
   "openMore": "Больше",
   "openDemo": "Демо",
+  "openGenerate": "Сгенерировать",
   "openXml": "Импорт XML",
   "openCaps": "Caps Lock включен",
   "openClickToOpen": "Нажмите, чтобы открыть файл",
@@ -396,6 +397,7 @@
   "setGenShowSubgroups": "Показать записи из всех подгрупп",
   "setGenTableView": "Табличное представление списка записей",
   "setGenColorfulIcons": "Красочные иконки в списке",
+  "setGenUseMarkdown": "Markdown в заметках",
   "setGenDirectAutotype": "Если найдена только одна подходящая запись, выбирать ее для автозаполнения автоматически",
   "setGenFunction": "Поведение",
   "setGenAutoSyncOnClose": "Автоматически сохранять и синхронизировать при закрытии",
@@ -517,6 +519,7 @@
   "setShAutoTypeGlobal": "автозаполнение (когда приложение работает в фоновом режиме)",
   "setShCopyPassOnly": "скопировать пароль",
   "setShRestoreApp": "открыть {}",
+  "setShGlobal": "Эти системные горячие клавишы работают, когда приложение запущено в фоновом режиме. Вы можете нажать на них, чтобы выбрать свою собственную комбинацию.",
   "setShLock": "заблокировать базу данных",
   "setShEdit": "Нажмите новую комбинацию клавиш",
   "setPlInstallTitle": "Установить новые плагины",
