--- a/docs/translations/uk/uk.json
+++ b/docs/translations/uk/uk.json
@@ -85,6 +85,7 @@
   "menuEmptyTrashAlert": "Очистити кошик? ",
   "menuEmptyTrashAlertBody": "Ви не зможете повернути елементи",
   "menuItemCollapsed": "Двічі натисніть, щоб розгорнути",
+  "menuRestoreApp": "Відкрити {}",
   "alertYes": "Так",
   "alertNo": "Ні",
   "alertOk": "ОК",
@@ -179,8 +180,10 @@
   "searchRank": "Автоматично",
   "openOpen": "Відкрити",
   "openNew": "Створити",
+  "openNewFile": "Новий",
   "openMore": "Ще варіанти",
   "openDemo": "Демо",
+  "openGenerate": "Генерувати",
   "openXml": "Імпортуват XML",
   "openCaps": "Caps Lock увімкнено",
   "openClickToOpen": "Натисніть, щоб відкрити файл",
@@ -221,6 +224,7 @@
   "openFileNoCacheError": "Файл не знайдено в кеші. Це може трапитися, якщо сховище браузера було очищено. Щоб відкрити файл, видаліть його з KeeWeb і додайте заново.",
   "detAttDownload": "Натисніть Shift і клацніть по вкладенню щоб завантажити або",
   "detAttDelToRemove": "Delete для видалення",
+  "detAttSave": "Зберегти як ...",
   "detEmpty": "Ваші паролі будуть відображатися тут",
   "detGroupRestore": "Для того, щоб відновити цю групу, будь ласка, перетягніть її в будь-яку групу поза кошика.",
   "detHistoryClickPoint": "Натисніть на точку на часовій шкалі, щоб побачити стан",
@@ -509,6 +513,7 @@
   "setShSet": "параметри програми",
   "setShCopyPassGlobal": "копія пароля (якщо програма працює у фоновому режимі)",
   "setShAutoTypeGlobal": "автовведення (коли програма згорнута)",
+  "setShRestoreApp": "відкрити {}",
   "setShLock": "блокувати базу даних",
   "setShEdit": "Натисніть нову комбінацію клавіш, щоб встановити їх як гарячу",
   "setPlInstallTitle": "Встановити нові плагіни",
