--- a/docs/translations/meta.json
+++ b/docs/translations/meta.json
@@ -14,8 +14,8 @@
   "ja": {
     "name": "日本語",
     "nameEn": "Japanese",
-    "count": 558,
-    "version": "1.4.0"
+    "count": 559,
+    "version": "1.5.0"
   },
   "pt-PT": {
     "name": "Português",
@@ -50,8 +50,8 @@
   "fi": {
     "name": "Suomi",
     "nameEn": "Finnish",
-    "count": 421,
-    "version": "1.2.0"
+    "count": 422,
+    "version": "1.3.0"
   },
   "hu": {
     "name": "Magyar",
@@ -65,11 +65,17 @@
     "count": 521,
     "version": "1.2.0"
   },
+  "sk": {
+    "name": "Slovenčina",
+    "nameEn": "Slovak",
+    "count": 560,
+    "version": "1.0.0"
+  },
   "uk": {
     "name": "Українська",
     "nameEn": "Ukrainian",
-    "count": 549,
-    "version": "1.9.0"
+    "count": 554,
+    "version": "1.10.0"
   },
   "pt-BR": {
     "name": "Português (Brasil)",
@@ -87,7 +93,7 @@
     "name": "Nederlands",
     "nameEn": "Dutch",
     "count": 560,
-    "version": "1.16.0"
+    "version": "1.17.0"
   },
   "fr-FR": {
     "name": "Français",
@@ -110,8 +116,8 @@
   "ru-RU": {
     "name": "Русский",
     "nameEn": "Russian",
-    "count": 557,
-    "version": "1.17.0"
+    "count": 560,
+    "version": "1.18.0"
   },
   "es-ES": {
     "name": "Español",
